--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -16,14 +16,13 @@
         <img id="header-logo" src="../images/Logo_of_Oslo_Metropolitan_University_ffd500.png" alt="OsloMet Logo">
     </a>
     <nav>
-        <div class="dropdown" style="float:right;">
-            <button class="dropbtn"><i class="fa fa-bars"></i></button>
-            <div class="dropdown-content">
-                 <a href="../index.html">Matematisk modellering og datavitenskap - ingeniør</a> 
-                 <a href="accessibility.html">Accessibility</a> 
-                 <a href="github.html">Github</a> 
-
-
+        <a id="search-button" href="https://www.oslomet.no/s?q"><i class="fa fa-search" alt="Søk"></i></a>
+        <div class="dropdown">
+            <button class="dropbtn" id="menu-button"><i class="fa fa-bars" alt="Meny"></i></button>
+            <div class="dropdown-content" id="dropdown-menu">
+                <a href="../index.html">Matematisk modellering og datavitenskap - ingeniør</a>
+                <a href="accessibility.html">Accessibility</a>
+                <a href="github.html">Github</a>
             </div>
         </div>
     </nav>
@@ -32,129 +31,137 @@
 
 <body class="activity">
     <div id="accessibility-background"></div>
-    <article>
-        <div class="container">
-            <h1 class="top-page">Utforsk Oslo på en ny måte!</h1>
-            <p class="info-box">Velkommen til din guide til Oslo,
-                hvor vi har samlet de beste tipsene innen fire spennende kategorier.
-                Enten du er ute etter å oppdage Oslos skjulte perler, finne en hyggelig kafé, oppleve byens
-                kulturattraksjoner eller utforske det pulserende utelivet, har vi noe for alle.
-                La deg inspirere og gjør deg klar til å utforske Oslo fra et nytt perspektiv!
-            </p>
+    <main>
+        <article>
+            <div class="container">
+                <h1 class="top-page">Utforsk Oslo på en ny måte!</h1>
+                <p class="info-box">Velkommen til din guide til Oslo,
+                    hvor vi har samlet de beste tipsene innen fire spennende kategorier.
+                    Enten du er ute etter å oppdage Oslos skjulte perler, finne en hyggelig kafé, oppleve byens
+                    kulturattraksjoner eller utforske det pulserende utelivet, har vi noe for alle.
+                    La deg inspirere og gjør deg klar til å utforske Oslo fra et nytt perspektiv!
+                </p>
 
-        </div>
-    </article>
-    
-
-    <article class="category-box-container">
-        <section class="category-box">
-            <h2> Uteliv </h2>
-            <a class="more-info-links" href="#uteliv"> 
-                <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
-                    <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
-                </svg>
-            </a>
-
-            <picture>
-                <source srcset="/images/utelivBg1.jpg" media="(min-width: 600px)">
-                <source srcset="/images/utelivBg1.jpg" media="(max-width: 599px)">
-                <img src="/images/utelivBg1" alt="bilde av kafe" style="width: 100%;">
-            </picture>
-            
-            <p> Utforsk Oslos fantastiske uteliv! Utforsk byens spennende uteliv!
-                Uansett om du liker eksklusive cocktailbarer, livlige klubber eller
-                koselige puber, finnes det noe for enhver smak.
-            </p>
-
-        </section>
-
-        <section class="category-box">
-            <h2> Kafe </h2>
-            <a class="more-info-links" href="#uteliv"> 
-                <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
-                    <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
-                </svg>
-            </a>
-
-            <picture>
-                <source srcset="/images/cafeBg2.jpg" media="(min-width: 600px)">
-                <source srcset="/images/kafe1.1.jpg" media="(max-width: 599px)">
-                <img src="/images/kafe1.jpg" alt="bilde av kafe" style="width: 100%;">
-            </picture>
-
-            <p> Nyt en avslappende stund på en av byens mange kaféer.
-                Enten du foretrekker en kopp kaffe, te, eller kanskje noe
-                søtt ved siden av, finner du et sted som passer din stil.
-            </p>
-        </section>
-
-        <section class="category-box">
-            <h2> Attraksjoner </h2>
-            <a class="more-info-links" href="#uteliv"> 
-                <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
-                    <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
-                </svg>
-            </a>
-
-            <picture>
-                <source srcset="/images/attractionsBg3.jpg" media="(min-width: 600px)">
-                <source srcset="/images/attractionsBg3.jpg" media="(max-width: 599px)">
-                <img src="/images/attractionsBg3" alt="bilde av kafe" style="width: 100%;">
-            </picture>
-
-            <p> Oslo er hjem til mange spennende og ikoniske attraksjoner.
-                Byen har mange ikoniske og spennende attraksjoner! Oppdag vakre parker,
-                imponerende museer og historiske monumenter som gir innblikk i kultur og
-                historie.
-                <a href="https://www.w3schools.com/" target="_blank">Visit W3Schools!</a>
+            </div>
+        </article>
 
 
-            </p>
-        </section>
+        <article class="category-box-container">
+            <section class="category-box">
+                <h2> Uteliv </h2>
+                <a class="more-info-links" href="#uteliv">
+                    <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
+                        viewBox="0 -4 24 24">
+                        <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                    </svg>
+                </a>
 
-        <section class="category-box">
-            <h2> Aktiviteter </h2>
-            <a class="more-info-links" href="#uteliv"> 
-                <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
-                    <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
-                </svg>
-            </a>
-            <picture>
-                <source srcset="/images/activitiesBg4.jpg" media="(min-width: 600px)">
-                <source srcset="/images/activitiesBg4.jpg" media="(max-width: 599px)">
-                <img src="/images/activitiesBg4.jpg" alt="bilde av kafe" style="width: 100%;">
-            </picture>
+                <picture>
+                    <source srcset="/images/utelivBg1.jpg" media="(min-width: 600px)">
+                    <source srcset="/images/utelivBg1.jpg" media="(max-width: 599px)">
+                    <img src="/images/utelivBg1" alt="bilde av kafe" style="width: 100%;">
+                </picture>
 
-            <p> Oslo tilbyr et bredt utvalg av aktiviteter for alle aldre og interesser.
-                Det finnes aktiviteter for alle interesser! Fra naturopplevelser i skog
-                og mark til urbane eventyr og sportsaktiviteter – her er det mye å utforske
-                året rundt.
-            </p>
-        </section>
+                <p> Utforsk Oslos fantastiske uteliv! Utforsk byens spennende uteliv!
+                    Uansett om du liker eksklusive cocktailbarer, livlige klubber eller
+                    koselige puber, finnes det noe for enhver smak.
+                </p>
 
-        <section class="category-box">
-            <h2> Budsjettvennlig </h2>
-            <a class="more-info-links" href="#uteliv"> 
-                <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
-                    <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
-                </svg>
-            </a>
-            <picture>
-                <source srcset="/images/cafeBg2.jpg" media="(min-width: 600px)">
-                <source srcset="/images/kafe1.1.jpg" media="(max-width: 599px)">
-                <img src="/images/kafe1.jpg" alt="bilde av kafe" style="width: 100%;">
-            </picture>
+            </section>
 
-            <p> Oslo trenger ikke å være dyrt! Hvis du er ute etter rimelige opplevelser,
-                finnes det mange steder som tilbyr fantastisk verdi. Oppdag gratis opplevelser,
-                rimelige spiseplasser og vakre utendørsområder som byr på flotte opplevelser.
-            </p>
-        </section>
+            <section class="category-box">
+                <h2> Kafe </h2>
+                <a class="more-info-links" href="#uteliv">
+                    <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
+                        viewBox="0 -4 24 24">
+                        <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                    </svg>
+                </a>
 
-    </article>
+                <picture>
+                    <source srcset="/images/cafeBg2.jpg" media="(min-width: 600px)">
+                    <source srcset="/images/kafe1.1.jpg" media="(max-width: 599px)">
+                    <img src="/images/kafe1.jpg" alt="bilde av kafe" style="width: 100%;">
+                </picture>
+
+                <p> Nyt en avslappende stund på en av byens mange kaféer.
+                    Enten du foretrekker en kopp kaffe, te, eller kanskje noe
+                    søtt ved siden av, finner du et sted som passer din stil.
+                </p>
+            </section>
+
+            <section class="category-box">
+                <h2> Attraksjoner </h2>
+                <a class="more-info-links" href="#uteliv">
+                    <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
+                        viewBox="0 -4 24 24">
+                        <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                    </svg>
+                </a>
+
+                <picture>
+                    <source srcset="/images/attractionsBg3.jpg" media="(min-width: 600px)">
+                    <source srcset="/images/attractionsBg3.jpg" media="(max-width: 599px)">
+                    <img src="/images/attractionsBg3" alt="bilde av kafe" style="width: 100%;">
+                </picture>
+
+                <p> Oslo er hjem til mange spennende og ikoniske attraksjoner.
+                    Byen har mange ikoniske og spennende attraksjoner! Oppdag vakre parker,
+                    imponerende museer og historiske monumenter som gir innblikk i kultur og
+                    historie.
+                    <a href="https://www.w3schools.com/" target="_blank">Visit W3Schools!</a>
+
+
+                </p>
+            </section>
+
+            <section class="category-box">
+                <h2> Aktiviteter </h2>
+                <a class="more-info-links" href="#uteliv">
+                    <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
+                        viewBox="0 -4 24 24">
+                        <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                    </svg>
+                </a>
+                <picture>
+                    <source srcset="/images/activitiesBg4.jpg" media="(min-width: 600px)">
+                    <source srcset="/images/activitiesBg4.jpg" media="(max-width: 599px)">
+                    <img src="/images/activitiesBg4.jpg" alt="bilde av kafe" style="width: 100%;">
+                </picture>
+
+                <p> Oslo tilbyr et bredt utvalg av aktiviteter for alle aldre og interesser.
+                    Det finnes aktiviteter for alle interesser! Fra naturopplevelser i skog
+                    og mark til urbane eventyr og sportsaktiviteter – her er det mye å utforske
+                    året rundt.
+                </p>
+            </section>
+
+            <section class="category-box">
+                <h2> Budsjettvennlig </h2>
+                <a class="more-info-links" href="#uteliv">
+                    <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
+                        viewBox="0 -4 24 24">
+                        <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                    </svg>
+                </a>
+                <picture>
+                    <source srcset="/images/cafeBg2.jpg" media="(min-width: 600px)">
+                    <source srcset="/images/kafe1.1.jpg" media="(max-width: 599px)">
+                    <img src="/images/kafe1.jpg" alt="bilde av kafe" style="width: 100%;">
+                </picture>
+
+                <p> Oslo trenger ikke å være dyrt! Hvis du er ute etter rimelige opplevelser,
+                    finnes det mange steder som tilbyr fantastisk verdi. Oppdag gratis opplevelser,
+                    rimelige spiseplasser og vakre utendørsområder som byr på flotte opplevelser.
+                </p>
+            </section>
+
+        </article>
+        <script src="javascript/index-tabs"></script>
+    </main>
 
     <div id="course-cards">
-   
+
     </div>
 
     <!--<article class="main-box">
